Fix stratum1 length and align box titles.

--- a/status.css
+++ b/status.css
@@ -174,6 +174,8 @@ ul.details {
 }
 
 .infobox-icon {
+    display: inline-block;
+    width: 40px;
     padding-top: 0.4em;
     padding-right: 20px;
     padding-left: 10px;
